# snippets

./: .gitignore  LICENSE
android-apk-backup/: README  get-apks
bash-color/: bash-color.sh
benchmark-stdarg/: Makefile  README  stdarg.c
c-script/: README  c-script.sh
cgroup-memory-usage/: README.md  cgroup-memory-usage
chrome-disable-ctrl-w/: disable-ctrl-w.user.js  manifest.json
cpp-coroutines/: Makefile  co-generator-insights.cpp  co-generator.cpp  co-void.cpp
cpp-main/: CMakeLists.txt  Makefile  main.cpp
cython/simple/: Makefile  cythonize.py  main.py  module.pyx
debian-wifi/: README  interfaces  which-wlan0
dedup/: README  dedup.sh
distcc-scripts/: build-distcc-chroot
flatbuffers/: flat_main.cpp  message.fbs
flatbuffers-c/: CMakeLists.txt  flat_main.c  message.fbs
flatbuffers-cpp/: CMakeLists.txt  Makefile  flat_main.cpp
format-c/: number-units.c
gcc-instrument-functions/: Makefile  foo.c
git-serv-sh/: git-serv.cgi
m4a-to-mp3/: README  convert-m4a-to-mp3
markov/: markov.py
mk6in4tun/: README  mk6in4tun
mmap-ramdisk/: Makefile  mr.c  mrc.c
net-sh/: start-dhcp-on-any-eth-port.sh
old/c/000/: a.c  opcodes-intel.html
old/c/001/: a.c
old/c/003/: Makefile  a.c
old/c/005/: Makefile  a.c
old/c/013/: Makefile  heap.c  heap.h  main.c  minheap.c  tags
old/c/014/: .heap.c.swo  .heap.c.swp  .main.c.swp  .minheap.c.swp  .minheap2.c.swp  Makefile  heap.c  heap.h  main.c  minheap.c  minheap2.c  tags
old/c/015/: Makefile  a.c
old/c/016/: a.c
old/c/017/: a.c
old/c/018/: a.c
old/c/019/: Makefile  a.c  b.c
old/c/020/: Makefile2
old/c/021/: Makefile  lex.yy.c  y.tab.c  y.tab.h
old/c/022/: Makefile  a.c  b.cpp
old/c/023/: a.c  b.cpp  foo
old/c/024/: Makefile  a.cpp
old/c/025/: Makefile  a.c
old/c/026/: a.c
old/c/027/: Makefile  a.cc
old/c/028/: :w  Makefile  a.cpp
old/c/029/: Makefile  a.c
old/c/030/: a.c
old/c/031/: Makefile  a.cpp  cxx_runtime_2_6_9.patch
old/c/032/: a.c
old/c/033/: Makefile  a.c  b.cpp  i.h
old/c/034/: Makefile  a.c
old/mk/: Makefile
pagemap/: README
pow-c/: Makefile  pow.c
primes/: README
primes/fast-c/: .depend  .nfs000bc20300000010  .nfs000f02ac00000011  Makefile  README  primes  primes.c
primes/small-c/: Makefile  README  primes  primes.c
pybind/: CMakeLists.txt  Makefile  my_module.cpp  test.py
rhel-kernel-to-git/: README  kernel-spec-to-git
rust/hello_world/: Cargo.toml
sigio/: Makefile  README  sigio.c
strjoin-c/: Makefile  strjoin.c
swig-c-class/: Makefile  README.md  example.c  example.h  example.i  test.py
swig-example/: Makefile  example.c  example.h  example.i  test.py
syscall-to-caps/: README  syscall-to-caps
ultra-simple-stateful-firewall/: README
weechat/: smarttab.lua
(+86 files in other folders)
